--- a/react-practice/src/pages/home/styles.less
+++ b/react-practice/src/pages/home/styles.less
@@ -3,4 +3,14 @@
 	& button {
 		margin: 15px 0;
 	}
+	&-todo {
+		margin-right: 10px;
+		font-size: 15px;
+		&.is-liked {
+			color: red;
+		}
+	}
+	* {
+		outline: none !important;
+	}
 }
